--- a/AoC_2022_Day_08.ipynb
+++ b/AoC_2022_Day_08.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2JEK7EGyhJbLUi0OIQEAq",
+      "authorship_tag": "ABX9TyMTEMY6t49KZLElYdZvwpz1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,6 @@
         "  # Edge detection\n",
         "  if i == 0 or j == 0 or i == len(row) - 1 or j == len(col) - 1:\n",
         "    return True\n",
-        "\n",
         "  \n",
         "  if height > max(row[:j]) or height > max(row[j + 1:]):\n",
         "    return True\n",
@@ -60,7 +59,7 @@
         "\n",
         "  l_score, r_score, u_score, d_score = 0, 0, 0, 0\n",
         "\n",
-        "  for e in row[:j]:\n",
+        "  for e in row[:j][::-1]:\n",
         "    l_score += 1\n",
         "    if e >= height:\n",
         "      break\n",
@@ -70,7 +69,7 @@
         "    if e >= height:\n",
         "      break\n",
         "\n",
-        "  for e in col[:i]:\n",
+        "  for e in col[:i][::-1]:\n",
         "    u_score += 1\n",
         "    if e >= height:\n",
         "      break\n",
@@ -83,66 +82,26 @@
         "  return l_score * r_score * u_score * d_score\n",
         "\n",
         "# Part 1\n",
-        "print(sum(is_visable(i, j) for i in range(len(grid)) for j in range(len(grid))))\n",
+        "print(f\"Answer 1 {sum(is_visable(i, j) for i in range(len(grid)) for j in range(len(grid)))}\")\n",
         "\n",
-        "# Part 2 , 91000 too low! 1591200 too high\n",
-        "max(get_scenic_score(i, j) for i in range(len(grid)) for j in range(len(grid)))"
+        "# Part 2\n",
+        "print(f\"Answer 2 {max(get_scenic_score(i, j) for i in range(len(grid)) for j in range(len(grid)))}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Jz5TWQJhT_R_",
-        "outputId": "57a45941-5c35-4056-d0cd-a7743224ad46"
+        "outputId": "bac5e5c3-db17-4c67-bb08-0f6c5138e8bb"
       },
-      "execution_count": 61,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1713\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1591200"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 61
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for r in range(10):\n",
-        "  print(r)\n",
-        "  if r >=5:\n",
-        "    break"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "A3Ob5fa44hBR",
-        "outputId": "4123a6bb-1fad-472e-96c8-c7e70bd36470"
-      },
-      "execution_count": 60,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n"
+            "Answer 1 1713\n",
+            "Answer 2 268464\n"
           ]
         }
       ]
@@ -159,7 +118,7 @@
       "metadata": {
         "id": "QiANcfjsHhZk"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -268,16 +227,7 @@
       "metadata": {
         "id": "zMboRyb3Hhce"
       },
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "V7lgFx5fHjRj"
-      },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     }
   ]
